--- a/pySSHManager.conf
+++ b/pySSHManager.conf
@@ -16,3 +16,5 @@ group=default
 #The path of CSV file to save the host(s) information
 hostfile=hostfile.csv
 
+#Timeout for the SSH scan (seconds).
+timeout=0.1
